testsuite/poke.pkl/sref-diag-1.pk
/* { dg-do compile } */

type Foo =
  struct
  {
    var n = 10;
    int c;
  };

var n = (Foo{}).n; /* { dg-error "exist" } */
